// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brands.vue meta.status is false first element is clicked should match snapshot 1`] = `
<div
  class="container"
>
  <div
    class="float-right"
  >
    <button
      class="btn btn-primary"
    >
      
            New
        
    </button>
  </div>
   
  <h2>
    Brands
  </h2>
   
  <span
    class="row"
    name="list"
    tag="div"
  >
    <div
      class="col-12 col-md-6 col-lg-4 transition-item"
    >
      <div
        class="brand-item selected"
      >
        <span
          class="brand-name"
        >
          
                    Foo
                
        </span>
         
        <button
          appear=""
          class="btn btn-danger float-right brand-action"
          name="animation-slide-right-and-fade"
          style=""
        >
          
                        Delete
                    
        </button>
      </div>
       
      <p
        appear=""
        class="alert alert-danger mt-3"
        name="animation-slide-bottom-and-fade"
      >
        
                    Error message text.
                
      </p>
    </div>
    <div
      class="col-12 col-md-6 col-lg-4 transition-item"
    >
      <div
        class="brand-item"
      >
        <span
          class="brand-name"
        >
          
                    Bar
                
        </span>
         
        <button
          appear=""
          class="btn btn-danger float-right brand-action"
          name="animation-slide-right-and-fade"
          style="display: none;"
        >
          
                        Delete
                    
        </button>
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;

exports[`brands.vue meta.status is true first element is clicked should match snapshot 1`] = `
<div
  class="container"
>
  <div
    class="float-right"
  >
    <button
      class="btn btn-primary"
    >
      
            New
        
    </button>
  </div>
   
  <h2>
    Brands
  </h2>
   
  <span
    class="row"
    name="list"
    tag="div"
  >
    <div
      class="col-12 col-md-6 col-lg-4 transition-item"
    >
      <div
        class="brand-item selected"
      >
        <span
          class="brand-name"
        >
          
                    Foo
                
        </span>
         
        <button
          appear=""
          class="btn btn-danger float-right brand-action"
          name="animation-slide-right-and-fade"
          style=""
        >
          
                        Delete
                    
        </button>
      </div>
       
      <!---->
    </div>
    <div
      class="col-12 col-md-6 col-lg-4 transition-item"
    >
      <div
        class="brand-item"
      >
        <span
          class="brand-name"
        >
          
                    Bar
                
        </span>
         
        <button
          appear=""
          class="btn btn-danger float-right brand-action"
          name="animation-slide-right-and-fade"
          style="display: none;"
        >
          
                        Delete
                    
        </button>
      </div>
       
      <!---->
    </div>
  </span>
</div>
`;
